Add core module with API response handling, Gradle configuration, and update entity packages